api session, fix permission log
